deploy/gateway/resources.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kuberic-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kuberic
  namespace: xedio
spec:
  gatewayClassName: kuberic-envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: kuberic
  listeners:
  - name: grpc
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: kvstore-a
  namespace: xedio
spec:
  parentRefs:
  - name: kuberic
    sectionName: grpc
  hostnames:
  - kvstore-a.kuberic.test
  rules:
  - backendRefs:
    - name: kvstore-a-rw
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: kvstore-b
  namespace: xedio
spec:
  parentRefs:
  - name: kuberic
    sectionName: grpc
  hostnames:
  - kvstore-b.kuberic.test
  rules:
  - backendRefs:
    - name: kvstore-b-rw
      port: 8080
